Finished all of what I consider to be basic functionality of my calculator. I'm comfortable with its capacity at this point. I've also added a few small changes to my other projects just to go over them when I wa helping the Mammoth cohort with the same.

--- a/public/CSS/calculator.css
+++ b/public/CSS/calculator.css
@@ -33,6 +33,10 @@ button.clear-button:hover {
 	background-color: grey;
 }
 
+button.delete-button {
+	background-color: orange;
+}
+
 
 button {
 	/*width: 20px*/
@@ -54,7 +58,7 @@ button:hover {
 
 
 button.equals-button {
-	width: 172.5px;
+	width: 115px;
 }
 
 button.equals-button:hover {
